# nornir_jinja2

./: Makefile  README.rst  pyproject.toml
.github/workflows/: main.yaml
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/api/: index.doctree  tasks.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/api/: tasks.rst.txt
docs/html/api/: index.html  tasks.html
docs/source/: conf.py  index.rst
nornir_jinja2/plugins/tasks/: template_file.py  template_string.py
tests/: conftest.py
tests/unit/: test_template_file.py  test_template_string.py
