[tool.poetry]
name = "nornir_jinja2"
version = "0.1.0a0"
description = "Jinja2 plugins for nornir"
authors = ["David Barroso <dbarrosop@dravetech.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
nornir = { version = "~3.0.0a4", allow-prereleases = true }
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
black = { version = "19.10b0", allow-prereleases = true }
mypy = "*"
pylama = "^7.7.1"
pytest = "*"
nbval = "*"
jupyter = "^1"
sphinx = "^3.0.3"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.6.1"
sphinx-issues = "^1.2.0"
sphinx_rtd_theme = "^0.4.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
